tests/snapshots/cli__tests__001+--german.snap
---
source: tests/cli.rs
expression: "CommandResult { stdout, exit_code }"
---
stdout: "Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt.\nFranz jagt im komplett verwahrlosten Taxi quer durch Bayern.\nZwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich.\nVogel Quax zwickt Johnys Pferd Bim.\nSylvia wagt quick den Jux bei Pforzheim.\nPolyfon zwitschernd aßen Maexchens Vögel Rüben, Joghurt und Quark.\n\"Fix, Schwyz!\" quäkt Jürgen blöd vom Pass.\nVictor jagt zwölf Boxkämpfer quer über den großen Sylter Deich.\nFalsches Üben von Xylophonmusik quält jeden größeren Zwerg.\nHeizölrückstoßabdämpfung.\n"
exit_code: 0

