tests/snapshots/cli__tests__001+--german_--symbols.snap
---
source: tests/cli.rs
expression: "&stdout"
---
Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt.
Franz jagt im komplett verwahrlosten Taxi quer durch Bayern.
Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich.
Vogel Quax zwickt Johnys Pferd Bim.
Sylvia wagt quick den Jux bei Pforzheim.
Polyfon zwitschernd aßen Maexchens Vögel Rüben, Joghurt und Quark.
"Fix, Schwyz!" quäkt Jürgen blöd vom Pass.
Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich.
Falsches Üben von Xylophonmusik quält jeden größeren Zwerg.
Heizölrückstoßabdämpfung.

