tests/snapshots/cli__tests__002+--german.snap
---
source: tests/cli.rs
expression: "CommandResult { args, stdin, stdout, exit_code }"
---
args:
  - "--german"
stdin: "\n\n\nDuebel\n\n😂\n\n\u0010\n\n"
stdout: "\n\n\nDübel\n\n😂\n\n\u0010\n\n"
exit_code: 0

