tests/snapshots/cli__tests__002+--symbols.snap
---
source: tests/cli.rs
expression: "CommandResult { stdout, exit_code }"
---
stdout: "\n\n\nDuebel\n\n😂\n\n\u0010\n\n"
exit_code: 0

