tests/snapshots/cli__tests__003+--german.snap
---
source: tests/cli.rs
expression: "CommandResult { args, stdin, stdout, exit_code }"
---
args:
  - "--german"
stdin: Duebel -> 1.5mm; Wand != 3m²... UEBELTAETER! 😫
stdout: Dübel -> 1.5mm; Wand != 3m²... ÜBELTÄTER! 😫
exit_code: 0

