tests/snapshots/cli__tests__003+--symbols.snap
---
source: tests/cli.rs
expression: "&stdout"
---
Duebel → 1.5mm; Wand ≠ 3m²... UEBELTAETER! 😫
