tests/snapshots/cli__tests__binary-data-sorted-dry-run-linux.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args, stdin: None, stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "-vvvv"
  - "--sorted"
  - "--glob"
  - "**/*"
  - 0a1a09c8-2995-4ac5-9d60-01a0f02920e8
  - "--"
  - gone
stdin: ~
stdout:
  - "subdir/valid-utf8:2:37-73:unique string for precise searching: 0a1a09c8-2995-4ac5-9d60-01a0f02920e8\n"
  - "subdir/valid-utf8:2:37-41:unique string for precise searching: gone\n"
exit_code: 0
